# Nullix-dev

./: .gitignore  CMakeLists.txt  globals.hpp
errika/: errika.hpp
errika/include/error/: error.hpp
errika/source/error/: error.cpp
nullix/include/generator/: generator.hpp
nullix/source/backlight/: Backlight.cpp
nullix/source/diagnostics/: error.cpp
nullix/source/generator/: generator.cpp
nullix/source/host/: host.cpp
uniqx/: tracer.hpp  uniqx.hpp
uniqx/include/filesystem/: FileTree.hpp  FileTree.v1.hpp  Path.hpp  PathProxy.v1.hpp  t.cpp
uniqx/include/system/file_tree/: FileTree.hpp  PathProxy.hpp
uniqx/include/system/process/: ProcPd.hpp  ProcPipe.hpp  ProcStream.hpp  SubProcess.hpp
uniqx/include/system/process/sub_process/: Config.hpp  ProcResult.hpp  SubProcess.hpp  SysProcv1.hpp  UniqxPd.hpp  UniqxPipe.hpp
uniqx/source/filesystem/: FileTree.cpp  FileTree.v1.cpp  Path.cpp  PathProxy.v1.cpp
uniqx/source/system/file_tree/: FileTree.cpp  PathProxy.cpp
uniqx/source/system/process/: ProcPd.cpp  ProcPipe.cpp  ProcResult.cpp  ProcStream.cpp  SubProcess.cpp
uniqx/source/system/process/sub_process/: Config.cpp  ProcResult.cpp  SubProcess.cpp  SysProcv1.cpp  UniqxPd.cpp  UniqxPipe.cpp  aloca.txt  md.md  x.txt
uniqx/source/system/sub_process/: SubProcess.cpp
